Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
          <div class="perdeu" id="perdeu">
             <h4>Voce foi Comido</h4>
             <img src="perdeu.jpg">  
-            <a href="Index.html"><button>Reiniciar Enigma</button></a>
+            <a href="index.html"><button>Reiniciar Enigma</button></a>
         </div>
          <div class="ganhou" id="ganhou">
             <h4>Você Decifrou todos os Enigmas da Esfinge</h4>
